[mail-api] Fix: this should make X-Bm-Draft header filtering more reliable